libs/@local/hashql/hir/tests/ui/lower/inference/input-default-invalid.jsonc
//@ run: fail
//@ description: Test that input inference for the default works
[
  "input",
  "x",
  "Number",
  {
    "#literal": "42",
    "#type": "_"
    //~^ ERROR Type variable has incompatible upper and lower bounds
  }
]
